--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/vak8exm.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="dist/js/main.js"></script>
 </head>
@@ -27,65 +30,65 @@
       <li><a href="#iphone-image">THE APP</a></li>
       <li><a href="#heading-3">BENEFITS</a></li>
     </nav>
-  </div>
-  <div>
-    <h1 id="main-heading">Introducing NYC's contactless transit fare system:<br>Scan your hand to your next destination.</h1>
-    <div class="container">
-      <img src="src/images/home.jpg" class="main-image">
+    <div>
+      <h1 id="main-heading">Introducing NYC's contactless transit fare system:<br>Scan your hand to your next destination.</h1>
+      <div class="container">
+        <div class="title typewriter">THE BIOMETRIC METROCARD</div>
+        <img src="src/images/home.jpg" class="main-image">
+      </div>
     </div>
-  </div>
-  <div>
-    <img src="src/images/subway-busy.jpg" class="background-image">
-    <h1 id="heading-1">It's Not Fare!</h1>
-    <p>It’s time we catch up with the evolving technology and innovation of the 21st century. Keeping track of your MetroCard or waiting in the perpetual slow-moving lines to re-load or replace a card is getting old. Riders are ready for a swipe-free world. The question is, how can we get back those extra 30 seconds that can make the difference between making or missing a train?</p>
-  </div>
-  <div>
-    <img src="src/images/hand.jpg" class="background-image">
-    <h1 id="heading-2">The<br>BioMetric<br>MetroCard</h1>
-    <p>Simply prepay for trips ID'd by your hand-print, and enter the station with a quick swipe of just your hand. Goodbye MTA MetroCard hassle.</p>
-  </div>
-  <div>
-    <img src="src/images/iphone-x.png" id="iphone-image">
-    <div class="app-1-div">
-      <p class="app-1-title">Track Trip History</p>
-      <p class="app-1-desc">View a list of your complete and recent trip history. See how much you’ve spent from each trip, the travel time, and other basics of every ride you’ve ever taken.</p>
+    <div>
+      <img src="src/images/subway-busy.jpg" class="background-image">
+      <h1 id="heading-1">IT'S NOT FARE</h1>
+      <p class="problem">It’s time we catch up with the evolving technology and innovation of the 21st century. Keeping track of your MetroCard or waiting in the perpetual slow-moving lines to re-load or replace a card is getting old. Riders are ready for a swipe-free world.<br><br>The question is, how can we get back those extra 30 seconds that can make the difference between making or missing a train?</p>
     </div>
-    <div class="app-2-div">
-      <p class="app-2-title">Autofill Metro Fare</p>
-      <p class="app-2-desc">Once you set up your account and link it to a credit or debit card, you can begin enjoying the speed and convenience of mobile fare autofill. Never stand in line to buy tickets ever again!</p>
+    <div>
+      <img src="src/images/hand.jpg" class="background-image">
+      <h1 id="heading-2">THE<br>BIOMETRIC<br>METROCARD</h1>
+      <p class="solution">Simply prepay for trips ID'd by your hand-print, and enter the station with a quick swipe of just your hand. Goodbye MTA MetroCard hassle.</p>
     </div>
-    <div class="app-3-div">
-      <p class="app-3-title">User-friendly</p>
-      <p class="app-3-desc">Straightforward, clean, simple interface making it super easy to access and locate different features and tools.</p>
+    <div>
+      <img src="src/images/iphone-x.png" id="iphone-image">
+      <div>
+        <p class="app-1-title">Track Trip History</p>
+        <p class="app-1-desc">View a list of your complete and recent trip history. See how much you’ve spent from each trip, travel time, and details of every ride you’ve ever taken.</p>
+      </div>
+      <div>
+        <p class="app-2-title">Autofill Metro Fare</p>
+        <p class="app-2-desc">Once you set up your account and link it to a credit or debit card, begin enjoying the speed and convenience of mobile fare autofill.</p>
+      </div>
+      <div>
+        <p class="app-3-title">User-friendly</p>
+        <p class="app-3-desc">Straightforward, clean, simple interface making it super easy to access and locate different features and tools.</p>
+      </div>
     </div>
-  </div>
-  <div class="scrolling-box">
-    <img src="src/images/train.jpg" class="background-image">
-    <img src="src/images/pattern.png" class="bottom-pattern">
-    <h1 id="heading-3">Benefits</h1>
-    <p>Never lose or forget your MetroCard again.
-      <br>
-      Decrease chances of missing the train.
-      <br>
-      Faster lines, less congestion, frictionless traffic-flow.
-      <br>
-      Flexible fare-payment options.
-      <br>
-      Eliminate excessive litter.
-    </p>
-  </div>
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+    <div>
+      <img src="src/images/train.jpg" class="background-image">
+      <img src="src/images/pattern.png" class="bottom-pattern">
+      <h1 id="heading-3">BENEFITS</h1>
+      <p class="benefits">Never lose or forget your MetroCard again.
+        <br>
+        Decrease chances of missing the train.
+        <br>
+        Faster lines, less congestion, frictionless traffic-flow.
+        <br>
+        Flexible fare-payment options.
+        <br>
+        Eliminate excessive litter.
+      </p>
+    </div>
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-  ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-</body>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+  </body>
 
-</html>
+  </html>
